@@ -4,13 +4,13 @@ Hash: SHA256
 DIST cloog-0.17.0.tar.gz 4253468 SHA256 f265f5069830c03d2919a7673c0963495437d6d79a8cbd3474cde2d4e3291e04 SHA512 05ddc455b9b6875f8ef5bff83046d29fdb082db49b10806d84719054c678c6fa976f80b047a5a76ce36e4c6f2a371c406dd20e2938c88b95c77d3c411d01c39c WHIRLPOOL 6172f34cb0f7b25ebfc2722e7cd378fe29ffbe61a9cd7d5c994a50f44f75a12a6cdd4e72e8c90a6f0473c87d6eb958b049d85f4e75c0042a0b1283f3aa87adab
 DIST cloog-0.18.0.tar.gz 3776262 SHA256 1c4aa8dde7886be9cbe0f9069c334843b21028f61d344a2d685f88cb1dcf2228 SHA512 34404984c4269dfc19673712271b08f220b6b49e451e7479cefbc5d2f27ab8e780f5d51fbbc7cecb974dab655673d8348f2a1ece3a60feaeeb9413fccf16eb1d WHIRLPOOL e079de53e876448f1e9b783c864b820ebae39fca4f51d59e2528b1b68530910c48b23719e3fd760bf105e03838651e15f367709a2c8dde022627fe3f158134ea
 EBUILD cloog-0.17.0.ebuild 732 SHA256 3abbb591f6160fce59203fc8c49a0fe4486a54bd567758cfbc59273b90390e48 SHA512 69997dac2fd210bc5bc0df8429766e73b8090da64ddf01320d31a02c479813ef14ed31a109e1ed7a9913e25a98bf8ddd54260eef4bf1cbb242de372612437d36 WHIRLPOOL 25c09a07d99607b04a48fc81f0fe8c1680f4af544dfe3ebad54ea0512396073a6e358126e518ba0571007d5d8e51ae2bc5413d8d92b6ddff1ec4dee760dcb957
-EBUILD cloog-0.18.0.ebuild 931 SHA256 80907daf705fc3e1d200c3ce440d1a25b76c4960ac2dab0ccd64b68abc4d56ad SHA512 fe3845383c11ee627826b85a06ebb741608e7f871b74b98e1eeafff6c124daeb038497935830d94c7c5ee0cc80683c37ec7413ae039bf91d05c7465e269dc008 WHIRLPOOL a860c66fc40bd3b89544e2eb759eb45cabf5b3c6b01ffcdd7ada77bb04c821d07ac30df98d0d2ba8ff5dbaa3b18e5643ace67cb1de3b01a0f99ea39ea7ec4813
-MISC ChangeLog 1568 SHA256 b2b41cb87b50fad184ae39b2a031a1dc8aaf95fa49dc02cf75d0a02640878bf6 SHA512 29c8598f79956effa549ddb35dca28f8c3ac86c527f30466a904aa07db5f7452741ea3f6caf3636294500d8f564789102db3af1a81428585cde077eb0e1d7a7a WHIRLPOOL c688485172981fa2ff261fae1c0731fb8f371adc00b2640684f1c40e6ed9985f9551cb0ffbb95577dd794aedf393e084299337b107d7db5fb80525235d022737
+EBUILD cloog-0.18.0.ebuild 934 SHA256 9692104f032e4272799c71a04f9934c0eaf9c07d90eb03d9e0440738772f7b9f SHA512 a1fc3ed6c4b9b81ee3901a726280ba281b9d84c05788fa190db2d83b31e8bbe169104d5c2ed2d9186f4ccf63d25b18464c46a875e73f1760b4d7f14e8799b226 WHIRLPOOL 79898b1b57df553ab739df5ba8fb618eb4d4fd6e24934180745cb42f0785200b3a1bd7d88728d7b1d185675effecff68280d40ee171493f1794acd0768e67dc1
+MISC ChangeLog 1660 SHA256 839b857b0173eea9bf72879d53ba3a7c66d24e29eacac6ce30cadc7c529f2dd0 SHA512 cfb7677858564fb433763b4c3a661fd23bf4272eedb8df68f8b5b4ca22aa0107a56664f649211aa9b2ce2f59e78baf81da9aa2c23ba8b9fa729522fa854700ee WHIRLPOOL 5f32d9a8544ca38749cc056097cafd861bfcad4787044616c205375d5a0e0b54d8b799094bd341a534f8d081584d58efda79c2c995105787cd7d49a1756cbf30
 MISC metadata.xml 230 SHA256 15b25471afdabcaf32e2d45f2bee7575d349e323f0aa1e6bac9435c35dcd9a60 SHA512 2fc852dd6ff117d199eca85ee24e5d20e16fb2072ea00bd7a217f3a0841120393e5bcb994902dd8c9a4d1488ccac59774cddda844f4d51e16a8d7581fdd7d3c0 WHIRLPOOL 5f8a73e1b50c38fd9f761c766b70d662abbf6c1738d2a7bb71b6be79bd5136fc7f8bc61e5d98d8c9b8afe6625061de49ac00488007edb7591fa99915ee0868c7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJZOSkACgkQvFcC4BYPU0p5UACfQiN27nyZcbq/rXf0If6zfaY5
-lSAAoLkVOiItghkxXnUWVo3GDAWKWpS2
-=DGKl
+iEYEAREIAAYFAlJZzdYACgkQkKaRLQcq0GIIRgCfTKrfR+MAIy+/zkbV4MzNhFpK
+arIAnjXcvM4tkt/Csqm0axfmrSYHcRM9
+=z2u/
 -----END PGP SIGNATURE-----
