@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/cloog/cloog-0.18.0.ebuild,v 1.5 2013/10/12 11:57:28 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cloog/cloog-0.18.0.ebuild,v 1.6 2013/10/12 22:25:25 maekke Exp $
 
 EAPI="4"
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.bastoul.net/cloog/pages/download/${P}.tar.gz"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~amd64 ~hppa ~mips ~x86 ~amd64-fbsd"
+KEYWORDS="~amd64 ~arm ~hppa ~mips ~x86 ~amd64-fbsd"
 IUSE="static-libs"
 
 DEPEND="dev-libs/gmp
