@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/isl/isl-0.11.1.ebuild,v 1.5 2013/10/12 10:47:57 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/isl/isl-0.11.1.ebuild,v 1.6 2013/10/12 22:24:58 maekke Exp $
 
 EAPI=4
 inherit eutils
@@ -11,7 +11,7 @@ SRC_URI="http://www.kotnet.org/~skimo/isl/${P}.tar.bz2"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~amd64 ~hppa ~mips ~x86 ~amd64-fbsd"
+KEYWORDS="~amd64 ~arm ~hppa ~mips ~x86 ~amd64-fbsd"
 IUSE="static-libs"
 
 RDEPEND="dev-libs/gmp"
