@@ -4,10 +4,10 @@ DESCRIPTION=A loop generator for scanning polyhedra
 EAPI=4
 HOMEPAGE=http://www.bastoul.net/cloog/index.php
 IUSE=static-libs
-KEYWORDS=~amd64 ~hppa ~mips ~x86 ~amd64-fbsd
+KEYWORDS=~amd64 ~arm ~hppa ~mips ~x86 ~amd64-fbsd
 LICENSE=LGPL-2.1
 RDEPEND=dev-libs/gmp >=dev-libs/isl-0.11.1 !<dev-libs/cloog-ppl-0.15.10
 SLOT=0
 SRC_URI=http://www.bastoul.net/cloog/pages/download/cloog-0.18.0.tar.gz
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=39ae075e6319e00d334340e86d946458
+_md5_=a75f8a99849ef6366fd4aa5c33c3f6e1
