@@ -4,10 +4,10 @@ DESCRIPTION=A library for manipulating integer points bounded by affine constrai
 EAPI=4
 HOMEPAGE=http://www.kotnet.org/~skimo/isl/
 IUSE=static-libs
-KEYWORDS=~amd64 ~hppa ~mips ~x86 ~amd64-fbsd
+KEYWORDS=~amd64 ~arm ~hppa ~mips ~x86 ~amd64-fbsd
 LICENSE=LGPL-2.1
 RDEPEND=dev-libs/gmp
 SLOT=0
 SRC_URI=http://www.kotnet.org/~skimo/isl/isl-0.11.1.tar.bz2
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=ff3cda4ebfc4c2ede5ab3fa6a887e74e
+_md5_=0f8cfd971b08340d21c8968dbc2838fa
