@@ -3,7 +3,7 @@ DEPEND=elibc_glibc? ( >=sys-libs/glibc-2.8 ) >=sys-devel/binutils-2.20 sys-devel
 DESCRIPTION=The GNU Compiler Collection
 HOMEPAGE=http://gcc.gnu.org/
 IUSE=multislot nls nptl regression-test vanilla altivec cxx fortran nopie nossp doc gcj gtk hardened multilib objc objc-gc mudflap libssp objc++ openmp fixed-point graphite lto go
-KEYWORDS=~amd64 ~hppa ~x86 ~amd64-fbsd
+KEYWORDS=~amd64 ~arm ~hppa ~x86 ~amd64-fbsd
 LICENSE=GPL-3+ LGPL-3+ || ( GPL-3+ libgcc libstdc++ gcc-runtime-library-exception-3.1 ) FDL-1.3+
 PDEPEND=elibc_glibc? ( >=sys-libs/glibc-2.8 ) >=sys-devel/gcc-config-1.7
 RDEPEND=sys-libs/zlib nls? ( sys-devel/gettext ) virtual/libiconv >=dev-libs/gmp-4.3.2 >=dev-libs/mpfr-2.4.2 >=dev-libs/mpc-0.8.1 graphite? ( >=dev-libs/cloog-0.18.0 >=dev-libs/isl-0.11.1 )
@@ -11,4 +11,4 @@ RESTRICT=strip
 SLOT=4.8
 SRC_URI=mirror://gnu/gcc/gcc-4.8.1/gcc-4.8.1.tar.bz2 mirror://gentoo/gcc-4.8.1-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.1-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~dirtyepic/dist/gcc-4.8.1-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.8.1-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.1-uclibc-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.8.1-patches-1.2.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.1-patches-1.2.tar.bz2 http://dev.gentoo.org/~dirtyepic/dist/gcc-4.8.1-patches-1.2.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.8.1-patches-1.2.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.1-patches-1.2.tar.bz2 mirror://gentoo/gcc-4.8.1-piepatches-v0.5.7.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.8.1-piepatches-v0.5.7.tar.bz2 http://dev.gentoo.org/~dirtyepic/dist/gcc-4.8.1-piepatches-v0.5.7.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.8.1-piepatches-v0.5.7.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.8.1-piepatches-v0.5.7.tar.bz2 mirror://gentoo/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~dirtyepic/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~halcy0n/patches/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.4.3-specs-0.2.0.tar.bz2 gcj? ( ftp://sourceware.org/pub/java/ecj-4.5.jar )
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	fixheadtails	f96922acc9287f1e889a1e50a6c8986e	flag-o-matic	08a40a43c401c96d16477c02e56d9a64	gnuconfig	ee02e61d6c68cee478e2e69214b7caef	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	pax-utils	2424f959506320f5196de8f79fa05297	toolchain	767d6844012292b2d968da6706d8f3be	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=a62ea7e666e82a451a49d6647b792a1a
+_md5_=adae5263a555e4e75a2c6ce1ac924718
