@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.8.1-r1.ebuild,v 1.4 2013/10/12 11:58:55 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.8.1-r1.ebuild,v 1.5 2013/10/12 22:26:22 maekke Exp $
 
 PATCH_VER="1.2"
 UCLIBC_VER="1.0"
@@ -24,7 +24,7 @@ DESCRIPTION="The GNU Compiler Collection"
 
 LICENSE="GPL-3+ LGPL-3+ || ( GPL-3+ libgcc libstdc++ gcc-runtime-library-exception-3.1 ) FDL-1.3+"
 
-KEYWORDS="~amd64 ~hppa ~x86 ~amd64-fbsd"
+KEYWORDS="~amd64 ~arm ~hppa ~x86 ~amd64-fbsd"
 
 RDEPEND=""
 DEPEND="${RDEPEND}
