@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/isl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/isl/ChangeLog,v 1.14 2013/10/12 10:47:57 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/isl/ChangeLog,v 1.15 2013/10/12 22:24:58 maekke Exp $
+
+  12 Oct 2013; Markus Meier <maekke@gentoo.org> isl-0.11.1.ebuild:
+  add ~arm, bug #487266
 
   12 Oct 2013; Alexis Ballier <aballier@gentoo.org> isl-0.11.1.ebuild:
   keyword ~amd64-fbsd, bug #487266
