@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.973 2013/10/12 11:58:55 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.974 2013/10/12 22:26:22 maekke Exp $
+
+  12 Oct 2013; Markus Meier <maekke@gentoo.org> gcc-4.8.1-r1.ebuild:
+  add ~arm, bug #487266
 
   12 Oct 2013; Alexis Ballier <aballier@gentoo.org> gcc-4.8.1-r1.ebuild:
   keyword ~amd64-fbsd, bug #487266
